# TOFaceTracker

./: CMakeLists.txt  README.md
cross_for_7252_test/: TODynamiacBackgroundExtraction.cpp  TODynamiacBackgroundExtraction.h  TOFaceDecorator.cpp  TOFaceDecorator.h  damd_main.cpp  esutil.c  esutil.h  makefile  opencv_test.cpp  opencv_test.h  osd_cube_test.c  osd_cube_test.h  vibe-background-sequential.c
include/: LibTOFace.h  LibTOFaceDebug.h
src/: TOFaceDetector.cpp  TOFaceDetector.h  TOFaceType.h  TOFrameManager.cpp  TOFrameManager.h  TOImageSimilarityContrast.hpp  TOInterFace.cpp  TOInterFace.h  TOSkinFiltering.cpp  TOSkinFiltering.h  TOThreadBase.cpp  TOThreadBase.h  TOTrackerTwistedPool.cpp  TOTrackerTwistedPool.h  detectObject.cpp  detectObject.h  kcftracker.cpp  kcftracker.hpp  preprocessFace.cpp  preprocessFace.h  recttools.hpp
test/: TOLibConfig.cfg  VideoFaceDetector.cpp  VideoFaceDetector.h  glad.c  glad.h  main.cpp  shader.h  texture.h  toface.frag
tmp/: TOEventManager.cpp  TOEventManager.h  TOFaceDetector.cpp  TOFaceDetector.h  TOTimeStampObject.cpp  TOTimeStampObject.h  TOTracker.cpp  TOTracker.h  TOTrackerTwistedPair.cpp  TOTrackerTwistedPair.h
